# model_routing_sim

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: main.py
